--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,67 @@
-# Local .terraform directories
-.terraform/
+# =============================================================================
+# .gitignore – TCC PUC Minas (Forense de Memória com LiME)
+# =============================================================================
 
-# .tfstate files
+# ── Terraform: estado e diretório de plugins ──────────────────────────────────
+**/.terraform/
 *.tfstate
 *.tfstate.*
-
-# Crash log files
+*.tfstate.backup
 crash.log
 crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-
-# Ignore transient lock info files created by terraform apply
 .terraform.tfstate.lock.info
-
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Variáveis locais que podem conter credenciais / IPs sensíveis
+*.tfvars
+*.tfvars.json
+!*.tfvars.example          # exceção: arquivos de exemplo são seguros de commitar
+
+# ── Chaves SSH / certificados / segredos ─────────────────────────────────────
+*.pem
+*.key
+*.p12
+*.pfx
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+*.pub                       # chaves públicas geradas pelo Terraform
+
+# ── Capturas de memória (arquivos LiME podem ser muito grandes) ───────────────
+*.lime
+*.mem
+*.raw
+*.dd
+
+# ── Sistema Operacional ───────────────────────────────────────────────────────
+.DS_Store
+.DS_Store?
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ── Editores ─────────────────────────────────────────────────────────────────
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+\#*\#
+.\#*
+
+# ── Python (caso haja scripts auxiliares) ────────────────────────────────────
+__pycache__/
+*.py[cod]
+*.pyo
+.venv/
+venv/
+env/
+
+# ── Logs ─────────────────────────────────────────────────────────────────────
+*.log
