--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -7,8 +7,8 @@
 aws_region   = "us-east-1"
 project_name = "tcc-pucminas-lime"
 
-# Recomendado: t3.medium ou superior para compilar o módulo de kernel do LiME
-instance_type = "t3.medium"
+# Tipo de instancia: t3.micro (Free Tier - 750h/mes gratis) ou t3.medium (compilacao rapida, pago)
+instance_type = "t3.micro"
 
 # IMPORTANTE: restrinja ao seu IP público para não expor a porta 22 à internet
 # Para descobrir seu IP: curl -s ifconfig.me
